--- a/gb/24/8/24/n14317260.md
+++ b/gb/24/8/24/n14317260.md
@@ -19,7 +19,7 @@
 <p>习不仅身兼中共中央总书记、国家主席、中央军委主席三个党政军最高职务，还兼了十几个委员会或领导小组的职务，如：国家安全委员会主席，中央全面深化改革委员会主任，中央财经委员会主任，中央外事委员会主任，中央全面依法治国委员会主任，中央审计委员会主任，中央对台工作领导小组组长，中央军委深化国防和军队改革领导小组组长，中央军委联合作战指挥中心总指挥等。</p>
 <h3><strong>第二，习力主党政合一，邓则主张党政分开。</strong></h3>
 <p>邓小平在总结毛泽东时代的教训时，特别提到，“各级领导机关，都管了很多不该管、管不好、管不了的事”。</p>
-<p>因此，邓在1980年就提出“要手解决党政不分、以党代政的问题”。建议中央一部分主要领导不兼任政府职务，集中精力管党，管路线、方针、政策。邓认为，“这样做，有利于加强和改善中央的统一领导，有利于建立各级政府自上而下的强有力的工作系统，管好政府职权范围的工作”。</p>
+<p>因此，邓在1980年就提出“着手解决党政不分、以党代政的问题”。建议中央一部分主要领导不兼任政府职务，集中精力管党，管路线、方针、政策。邓认为，“这样做，有利于加强和改善中央的统一领导，有利于建立各级政府自上而下的强有力的工作系统，管好政府职权范围的工作。”</p>
 <p>习与邓的做法正好相反，在许多方面，改回到毛泽东倡导的党政合一，以党代政。</p>
 <p>中共二十大后，习将国务院变成了中共中央的执行机构，现任国务院总理李强是中共建政75年来权力最小的总理。习将国务院港澳办，改成中共中央港澳办，将科技部改成中共中央科技委的办事机构，另外成立中共中央社会部，将国务院的一些职能划归社会部。</p>
 <h3><strong>第三，习向干部职务终身制回归，邓则主张废除干部职务终身制。</strong></h3>
@@ -29,10 +29,10 @@
 <p>习近平在2017年中共十九大上连任中共中央总书记后，立即着手修改宪法有关国家主席、副主席任期制的规定。</p>
 <p>2018年3月，十三届全国人大一次会议通过的“宪法修正案”中，国家主席、副主席“连续任职不得超过两届”的规定被取消。这意味着国家主席、副主席可终身任职。</p>
 <p>1978年邓小平实行改革开放以来，到习近平之前，没有一位中共中央总书记三连任的。但是，2022年，习在中共二十大上实现了“三连任”。至今习也没有选定接班人。不少人怀疑，习在中共中央总书记这个职位上，也可能想搞终身制。</p>
-<h3><strong>第四，习对言论管控的超乎寻常，邓曾主张有限言论自由。</strong></h3>
+<h3><strong>第四，习对言论管控得超乎寻常，邓曾主张有限言论自由。</strong></h3>
 <p>1978年12月，中共十一届三中全会上，邓小平曾讲：“最可怕的是鸦雀无声。”“一听到群众有一点议论，尤其是尖锐一点的议论，就要追查所谓‘政治背景’、所谓‘政治谣言’，就要立案，进行打击压制，这种恶劣作风必须坚决制止。”“要重申‘三不主义’：不抓辫子，不扣帽子，不打棍子。”</p>
 <p>尽管邓并没有完全按照他上面说的做，但在1989年六四事件之前，中国还是有过一段言论相对自由的时期。</p>
-<p>习上台12年，对言论的管控越来越严厉。因为习主张党管一切，中共的党媒姓党，其他所有媒体也姓党。</p>
+<p>习上台12年，对言论的管控越来越严厉。因为习主张党管一切，中共的党媒姓党，其它所有媒体也姓党。</p>
 <p>“媒体姓党”意味着什么？意味着中国的所有媒体都必须“跟党中央保持高度一致”，即中共只许有一个声音，那就是党的声音。</p>
 <p>凡是被中共认为不与党中央保持一致的言论，皆在封杀之列。</p>
 <p>中共“纪律处分条例”专门对“妄议中央”作出处分规定。凡通过网络、广播、电视、报刊、传单、书籍等，或者利用讲座、论坛、报告会、座谈会等方式妄议者，视情节轻重，分别给予警告直至开除党籍的处分。</p>
@@ -41,19 +41,19 @@
 <p>邓小平的改革开放，主要局限在经济领域，突出表现在对民营经济的松绑。</p>
 <p>邓对民营经济松绑的结果是，民营经济贡献了中国税收的50%以上，国内生产总值的60%以上，技术创新成果的70%以上，城镇劳动就业的80%以上。</p>
 <p>但是，习上台12年，口头上也说支持民营经济发展，实际上，搞的却是国进民退，即大力支持国营经济发展，严格管控民营经济。</p>
-<p>2020年，一场对民营经济的监管风暴席卷全国，辅导学生学业的培教行业、电子商务、网络银行、电子游戏、网约车平台等在过去几十年中快速成长起来的民营企业，都受到重创。</p>
+<p>2020年，一场对民营经济的监管风暴席卷全国，辅导学生学业的教培行业、电子商务、网络银行、电子游戏、网约车平台等在过去几十年中快速成长起来的民营企业，都受到重创。</p>
 <p>一批民营企业家，沦为阶下囚。</p>
 <p>2020年11月11日，河北大午农牧集团董事长孙大午和他的妻子、两个儿子、两个儿媳等家人以及一些公司高管等28人，被中共警方以涉嫌寻衅滋事、破坏生产经营等罪名逮捕。2021年7月28日，孙大午被中共法院以犯聚众冲击国家机关罪、妨害公务罪、寻衅滋事罪、破坏生产经营罪、强迫交易罪、非法采矿罪、非法占用农用地罪、非法吸收公众存款罪，判处有期徒刑18年，并处罚金311万元。</p>
 <h3><strong>第六，习改革开放受益者少，邓改革开放受益者众。</strong></h3>
 <p>邓的改革开放，虽然最受益的是少数中共权贵家族，但是，工、农、兵、学、商，各行各业的人，多多少少，都从中受益。以恢复高考为例，许多农民的子女，通过高考，改变命运。这是至今很多人怀念邓的改革开放的重要原因所在。</p>
-<p>习改革开放12年，哪些人受益了？习选择性反腐打虎中那些没有被习查办的“老虎”、“大老虎”、“老老虎”、“老虎王”，可能是主要受益者，比如，江泽民家族、曾庆红家族、贾庆林家族、李长春家族、吴官正家族、贺国强家族、张高丽家族、刘云山家族等。</p>
+<p>习“改革开放”12年，哪些人受益了？习选择性反腐打虎中那些没有被习查办的“老虎”“大老虎”“老老虎”“老虎王”，可能是主要受益者，比如，江泽民家族、曾庆红家族、贾庆林家族、李长春家族、吴官正家族、贺国强家族、张高丽家族、刘云山家族等。</p>
 <p>除以上权贵家族外，中国广大的中下层民众，大多数都没有得到实惠。这也是当今中国社会民怨沸腾的重要原因所在。</p>
 <h3><strong>第七，习对外示强树敌，邓则“韬光养晦”。</strong></h3>
 <p>十年文革结束后，邓小平通过将中国的情形与发达资本主义国家比较，发现中国与这些国家的差距非常大，于是，提出“韬光养晦”的对外方针。</p>
 <p>何为“韬光养晦”？就是承认中国不是强国，而是“人口多，底子薄”，不能与头号资本主义强国——美国争锋，低调行事，少说多做，争取美国等西方发达国家向中共开放市场，为中共提供资金、技术、人才、服务等各方面的支持，在国际上尽量少树敌，为壮大中共实力争取一个有利的国际环境。</p>
-<p>习上台后，觉得中国已成为世界第二大经济体，很厉害了，抛弃邓的“韬光养晦”之策，开始奉行“大国外交”、“战狼外交”，逐步走上一条与美国争锋之路。</p>
-<p>2020年大瘟疫之年，习发起对美国的冷战，标志性事件有五：第一，1-2月，中共军舰挺进太平洋中部的中途岛军演。第二，3月，宣布南海战略核潜艇的“堡垒海区”建成。第三，6月，宣布对美国太空战部署完成。第四，7月开始，从渤海到黄海到东海到南海到内地，发起四十多年来最密集的军演。第五，8月25日，《人民日报》发表批判美国的长文，中心思想是：美国最坏，“中共国”最好。</p>
-<p>结果是：中美关系恶化到建交40多年来的最低点，中共与日本、韩国、菲律宾、印度、澳大利亚、加拿大、立陶宛等许多国家的关系恶化。</p>
+<p>习上台后，觉得中国已成为世界第二大经济体，很厉害了，抛弃邓的“韬光养晦”之策，开始奉行“大国外交”“战狼外交”，逐步走上一条与美国争锋之路。</p>
+<p>2020年大瘟疫之年，习发起对美国的冷战，标志性事件有五：第一，1—2月，中共军舰挺进太平洋中部的中途岛军演。第二，3月，宣布南海战略核潜艇的“堡垒海区”建成。第三，6月，宣布对美国太空战部署完成。第四，7月开始，从渤海到黄海到东海到南海到内地，发起四十多年来最密集的军演。第五，8月25日，《人民日报》发表批判美国的长文，中心思想是：美国最坏，“中共国”最好。</p>
+<p>结果是：中美关系恶化到建交四十多年来的最低点，中共与日本、韩国、菲律宾、印度、澳大利亚、加拿大、立陶宛等许多国家的关系恶化。</p>
 <p>时至今日，环顾全球，中共没有一个真朋友。俄罗斯、朝鲜、伊朗等极少数与中共关系密切的国家，与中共也是同床异梦，不过互相利用而已。</p>
 <h2><strong>习、邓改革开放的相同点</strong></h2>
 <p>习、邓改革开放的共同点都是，坚持党的领导，维持一党独裁。</p>
@@ -68,38 +68,41 @@
 <p>习上台后，在政治上不断集权，至今已从集权走向极权。极权之下，岂有政治体制改革？</p>
 <p>中共政治体制改革已死，这就意味着，中共改革开放已死。</p>
 <p>大纪元首发</p>
-<p>责任编辑：高义</p>
-	
+<p>责任编辑：高义#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313058.md#1">王友群：是谁提拔重用亿元贪官孙志刚的？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313755.md#1">王友群：中共内忧外患 最惧是兵变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14316205.md#1">王友群：邓小平拒绝平反的大右派彭文应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/23/n14316829.md#1">王友群：中共正在最后疯狂中走向灭亡</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/20/n9870365.md#1" target="_blank">林辉：文革第一禁书作者曾被内定死刑</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/7/n11240713.md#1" target="_blank">神灵赐福 巴西一企业稳步发展壮大</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/10/n11176292.md#1" target="_blank">【征文】田园：《资治通鉴》中的传统智慧</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/8/n11708865.md#1" target="_blank">香港立法会议员胡志伟：很佩服法轮功学员</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308151.md#1">香港凉茶趣谈：凉茶不“凉” 龟苓膏最初功用非“清热解毒”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313813.md#1">【未解之谜】CIA心灵部队（1）神秘人带来的特殊任务</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313716.md#1">贞观圣主（2）豪门贵女 雀屏选婿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313719.md#1">形形色色的轮回转生 因为什么缘由？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14312075.md#1">《倒数说爱你》观后感：从两可图形到双向救赎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14315500.md#1">【菁英论坛】纽时攻击神韵 犯常识错误</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/24/n14316902.md#1">【车评】大容量尾箱 2024 Hyundai Santa Fe XRT 2.5 AWD</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14316189.md#1">【时事金扫描】李强访俄唱赞歌 俄军揍中国渔民</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315341.md#1">中国青年失业率飙升 催生“烂尾娃”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14315544.md#1">【翻墙必看】分析：蔡奇言论异常的背后</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315161.md#1">深圳厚德书院爆雷 800多中产家庭教育梦碎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315424.md#1">杨颖现身港政协活动惹议 黄晓明新恋情登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315378.md#1">范冰冰街头等车形单影只 脚上一细节网友震惊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14315872.md#1">新《侏罗纪》众演员开心出演 奥斯卡影后弃演</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/23/n14316436.md#1">真人《火影忍者》剧本完成 《尚气》导演执导</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/23/n14316247.md#1">49岁周迅活动照登热搜 评论现两极分化</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/14/n14311144.md#1">如何省钱？20年前的畅销书至今仍实用</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/22/n14315815.md#1">为何飞机客舱内都很冷？ 应该如何应对？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/23/n14316374.md#1">白鹤芋多年不开花？ 用这招花20秒就可改善</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/21/n14315105.md#1">研究：孤独的人比较容易做恶梦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314473.md#1">【一箪食】空气炸锅猪肋排</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546042.md#1">【唐青看时事】王毅说漏嘴：无法接受俄战败</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542663.md#1">苦味可能对改善消化和血糖至关重要</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/8/24/n14317260.htm">王友群：习近平与邓小平改革开放的异同</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/8/24/n14317260.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
